force-app/main/default/objects/Account/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <label>Institution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Bulge Bracket</fullName>
            </value>
            <value>
                <fullName>Business Broker</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Buy-side M&amp;A</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Corporate M&amp;A</fullName>
            </value>
            <value>
                <fullName>Distressed</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>High Net Worth Individual</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Lower Middle Market</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Middle Market</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Placement Agent</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Private Pension</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Public Pension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>