force-app/main/default/objects/Account/fields/Watchlist_Stage__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>navpeII__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>In-Conversation</fullName>
            </value>
            <value>
                <fullName>Qualified for Pitch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>