force-app/main/default/objects/Account/recordTypes/Corporation.recordType-meta.xml
<RecordType>
    <fullName>Corporation</fullName>
    <active>true</active>
    <description>Large Fortune 500 companies.</description>
    <label>Corporation</label>
</RecordType>