force-app/main/default/objects/Account/recordTypes/Lender.recordType-meta.xml
<RecordType>
    <fullName>Lender</fullName>
    <active>true</active>
    <description>A firm that specializes in financial deals.</description>
    <label>Lender</label>
</RecordType>